# ipfs-cid

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml  test.yml
ipfs_cid/: __init__.py  base32.py  cid.py  encode.py  main.py  sha256.py
tests/: data.py  test_base32.py  test_cid.py  test_encode.py  test_ipfs_cid.py  test_sha256.py
