[tool.poetry]
name = "ipfs-cid"
version = "0.1.0"
description = "Library for generating IPFS v1 CIDs"
authors = ["Mythic <mythic@thunderstore.io>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ipfs_cid" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | \.venv
    | \.vscode
    | \.idea
  )/
)
'''

[tool.isort]
profile = "black"
