[tool.poetry]
name = "ipfs-cid"
version = "0.1.1"
description = "A library for building IPFS CID v1 compatible content identifiers using fixed encoding parameters."
authors = ["Mythic <mythic@thunderstore.io>"]
repository = "https://github.com/thunderstore-io/ipfs-cid"
homepage = "https://github.com/thunderstore-io/ipfs-cid"
keywords = ["ipfs", "multihash", "multibase", "cid", "hash"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ipfs_cid" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-codeblocks = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | \.venv
    | \.vscode
    | \.idea
  )/
)
'''

[tool.isort]
profile = "black"
